--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@ this document has been fiexed by harry on branch feature1
     <title>Git Account</title>
 </head>
 <body>
+    <!--added comment-->
     <h1>Creating Git Account</h1>
 </body>
 </html>
